--- a/app/globalsV2.css
+++ b/app/globalsV2.css
@@ -15,6 +15,7 @@ html {
   --animate-rotate: rotate-left-right 10s ease-in-out infinite;
   --animate-wordCycle: wordCycle 8s linear infinite;
   --breakpoint-xs: 30rem;
+  --breakpoint-xxs: 24rem;
   --breakpoint-custom: 75.5rem;
   --font-switzer: var(--font-switzer);
   --color-gray-500: #828282;
@@ -76,14 +77,14 @@ html {
   }
 
   .inside-container-small {
-    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-5.5 py-12 md:px-11 md:py-16;
+    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 xxs:px-5.5 py-12 md:px-11 md:py-16;
   }
 
   .inside-container {
-    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-5.5 py-12 md:gap-16 md:px-11 md:py-24 lg:py-32;
+    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 xxs:px-5.5 py-12 md:gap-16 md:px-11 md:py-24 lg:py-32;
   }
   .inside-container-large {
-    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-5.5 pt-32 pb-12 md:gap-16 md:px-11 lg:pt-36 lg:pb-16;
+    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 xxs:px-5.5 pt-32 pb-12 md:gap-16 md:px-11 lg:pt-36 lg:pb-16;
   }
 
   body[data-mobile-menu="closed"] {
