--- a/app/globalsV2.css
+++ b/app/globalsV2.css
@@ -66,6 +66,25 @@ html {
   [role="button"]:not(:disabled) {
     cursor: pointer;
   }
+
+  .animate-click:not(:disabled) {
+    animation: click 200ms ease-in-out;
+    &:active {
+      animation: none;
+    }
+  }
+
+  @keyframes click {
+    0%,
+    100% {
+      transform: scaleY(1) scaleX(1);
+    }
+    50% {
+      transform: scaleY(0.8) scaleX(1.1);
+      filter: saturate(2) brightness(1.2);
+    }
+  }
+
   .underline-hover {
     @apply relative hover:after:scale-x-100;
     &::after {
@@ -77,14 +96,14 @@ html {
   }
 
   .inside-container-small {
-    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 xxs:px-5.5 py-12 md:px-11 md:py-16;
+    @apply xxs:px-5.5 mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 py-12 md:px-11 md:py-16;
   }
 
   .inside-container {
-    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 xxs:px-5.5 py-12 md:gap-16 md:px-11 md:py-24 lg:py-32;
+    @apply xxs:px-5.5 mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 py-12 md:gap-16 md:px-11 md:py-24 lg:py-32;
   }
   .inside-container-large {
-    @apply mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 xxs:px-5.5 pt-32 pb-12 md:gap-16 md:px-11 lg:pt-36 lg:pb-16;
+    @apply xxs:px-5.5 mx-auto flex w-full max-w-6xl flex-col gap-12 px-2.5 pt-32 pb-12 md:gap-16 md:px-11 lg:pt-36 lg:pb-16;
   }
 
   body[data-mobile-menu="closed"] {
